--- a/package.json
+++ b/package.json
@@ -89,15 +89,22 @@
     "webpack-target-electron-renderer": "^0.1.1"
   },
   "dependencies": {
+    "csv": "^0.4.6",
+    "csv-parse": "^1.0.0",
     "electron-debug": "^0.4.0",
     "font-awesome": "^4.4.0",
+    "google-maps": "^3.1.0",
     "history": "^1.13.0",
+    "jsdom": "^7.0.2",
     "react": "^0.14.2",
+    "react-bootstrap": "^0.27.3",
     "react-dom": "^0.14.2",
+    "react-google-maps": "^4.2.0",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
     "redux": "^3.0.4",
     "redux-promise": "^0.5.0",
-    "redux-thunk": "^1.0.0"
+    "redux-thunk": "^1.0.0",
+    "togeojson": "^0.13.0"
   }
 }
